bugfix SIG-988 添加text-overflow，white-space，overflow属性

--- a/src/pages/Guide/Finish/Applying/applying.scss
+++ b/src/pages/Guide/Finish/Applying/applying.scss
@@ -38,6 +38,9 @@
                 line-height: 28px;
                 font-weight: 550;
                 margin-bottom: 8px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
             }
         }
         li:nth-child(1){
